src/main/java/com/mcnc/example/springmvc/base/error/ErrorType.java
package com.mcnc.example.springmvc.base.error;

/**
 * Error type
 * @author Sotheara
 *
 */
public enum ErrorType {
	
	SYSTEM, BUSINESS
}
